--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,7 @@ p {
 }
 
 .button {
-    border: 1px solid #fff;
+    border: 1px solid #186AC9;
     border-radius: 5px;
     display: block;
     position: relative;
@@ -127,8 +127,4 @@ ul li {
     list-style: none;
     margin: 0;
     padding: 0;
-}
-
-button {
-    background-color: transparent;
 }
