それぞれのページでのアイコン表示

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,7 +62,7 @@ p {
     border: 1px solid #0079c1;
     border-top: none;
     outline: 0;
-    cursor: pointer
+    cursor: pointer;
 }
 
 .head {
